# struct_grid

./: CMakeLists.txt  LICENSE  README.md
docs/: README.md  _config.yml  airfoil.md  index.md  laplace_heat.md  solvers.md
docs/assets/: adi_resid.txt  cg_resid.txt  jacobi_resid.txt  mg_resid.txt  plot_residual.py
docs/stylesheets/: custom.css
python/: try_adi.py
src/: ADI.cu  ADI.h  BiCGStab.cu  BiCGStab.h  CG.cu  CG.h  CMakeLists.txt  Jacobi.cpp  Jacobi.cu  Jacobi.h  LaplaceHeat.cpp  LaplaceHeat.cu  LaplaceHeat.h  LidDrivenCavity.cu  LidDrivenCavity.h  LinearSolver.cu  LinearSolver.h  LinearSolvers.cpp  LinearSolvers.h  Multigrid.cu  Multigrid.h  adi.cu  jacobi.cu  laplace_heat.cu  multigrid.cu  try_adi.cu
src/airfoil/: CMakeLists.txt  airfoil.cu  airfoil_2.cu  airfoil_3.cu  airfoil_4.cu  du00w212.x  grid.cu
